default prettier formatting on docs/use-the-network/console
npx prettier --write --prose-wrap always docs/use-the-network

--- a/docs/use-the-network/console/cli.mdx
+++ b/docs/use-the-network/console/cli.mdx
@@ -25,8 +25,8 @@ appropriate platform.
 
 ## API Key
 
-You must activate a [Console API key](my-account#console-api-keys)
-before using the CLI.
+You must activate a [Console API key](my-account#console-api-keys) before using
+the CLI.
 
 The first time you run the CLI, it will prompt you for this key. It will save
 the key in a local file: `.helium-console-config.toml`
