--- a/docs/use-the-network/console/data-credits.mdx
+++ b/docs/use-the-network/console/data-credits.mdx
@@ -10,7 +10,8 @@ Data Credits (DCs) are central to the Helium Blockchain and Network. Read about
 how they fit into our Tokenomics
 [here](/blockchain/helium-token#data-credits-and-burn-and-mint-economics).
 
-For a video tutorial of how to purchase Data Credits on Console, check out our Tips & Tricks video [here](https://youtu.be/jyMGLymuOCE)
+For a video tutorial of how to purchase Data Credits on Console, check out our
+Tips & Tricks video [here](https://youtu.be/jyMGLymuOCE)
 
 :::info
 
@@ -38,14 +39,14 @@ The transaction is as follows:
   packet
 - The Helium LoRaWAN Network Server expresses interest in the packet and accepts
   delivery
-- The Miner provides the packet under the promise that the LoRaWAN Network Server
-  will “burn a DC” in the name of the Miner
+- The Miner provides the packet under the promise that the LoRaWAN Network
+  Server will “burn a DC” in the name of the Miner
 
 You may have noticed that the final step includes a promise from the Helium
 LoRaWAN Network Server. The principle at work here is that each packet in its
 own is quite insignificant in value and so the Miner is willing to extend this
-service of delivery in exchange for the promise; by doing such, usage experiences
-low latencies. Should the Helium LoRaWAN Network Server fail to fulfill its
-promise, the Miner would place the Helium LoRaWAN Network Server on a deny list
-and would no longer route packets from any devices to this Helium LoRaWAN
-Network Server.
+service of delivery in exchange for the promise; by doing such, usage
+experiences low latencies. Should the Helium LoRaWAN Network Server fail to
+fulfill its promise, the Miner would place the Helium LoRaWAN Network Server on
+a deny list and would no longer route packets from any devices to this Helium
+LoRaWAN Network Server.
