--- a/docs/use-the-network/console/integrations/adafruitio.mdx
+++ b/docs/use-the-network/console/integrations/adafruitio.mdx
@@ -60,8 +60,8 @@ which are auto populated when messages are actually sent, which are
 group topics to send device data to AdafruitIO over MQTT, you can read more
 about it [here](https://io.adafruit.com/api/docs/mqtt.html#group-topics).
 
-Next, let's name the integration in step 3. You will use this name to
-identify the integration when attaching it to devices.
+Next, let's name the integration in step 3. You will use this name to identify
+the integration when attaching it to devices.
 
 <img
   src={useBaseUrl(
@@ -89,10 +89,15 @@ _Create Integration_ to finish.
 
 ## Connecting Integrations to Devices
 
-Devices or groups of devices (via labels) can be directly connected to integrations on the Flows Worskpace. Labels are identifiers used to group devices for easy management. To connect one or more devices to one or more integrations, simply connect the Device and Integration nodes on the Flows Workspace.
+Devices or groups of devices (via labels) can be directly connected to
+integrations on the Flows Worskpace. Labels are identifiers used to group
+devices for easy management. To connect one or more devices to one or more
+integrations, simply connect the Device and Integration nodes on the Flows
+Workspace.
 
-:::info
-Quick video tutorial connecting devices to an integration [here](https://www.youtube.com/watch?v=lnERw1f7TGE).
-:::
+:::info Quick video tutorial connecting devices to an integration
+[here](https://www.youtube.com/watch?v=lnERw1f7TGE). :::
 
-Node elements (devices, labels, integrations) need to be created before they're available on the Flows Workspace. More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
+Node elements (devices, labels, integrations) need to be created before they're
+available on the Flows Workspace. More information about Flows
+[here](https://docs.helium.com/use-the-network/console/flows/).
