--- a/docs/use-the-network/console/integrations/cargo.mdx
+++ b/docs/use-the-network/console/integrations/cargo.mdx
@@ -8,11 +8,9 @@ slug: /use-the-network/console/integrations/cargo
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-:::info 
-[Helium Cargo](http://cargo.helium.com/) is an evaluation tool and the
+:::info [Helium Cargo](http://cargo.helium.com/) is an evaluation tool and the
 data collected is available to all developers. Please do not share any sensitive
-information. Use at your own discretion. 
-:::
+information. Use at your own discretion. :::
 
 ## Add a Cargo Integration
 
@@ -29,13 +27,18 @@ The next step is to name the integration.
 
 ## Connecting Integrations to Devices
 
-Devices or groups of devices (via labels) can be directly connected to integrations on the Flows Worskpace. Labels are identifiers used to group devices for easy management. To connect one or more devices to one or more integrations, simply connect the Device and Integration nodes on the Flows Workspace.
+Devices or groups of devices (via labels) can be directly connected to
+integrations on the Flows Worskpace. Labels are identifiers used to group
+devices for easy management. To connect one or more devices to one or more
+integrations, simply connect the Device and Integration nodes on the Flows
+Workspace.
 
-:::info
-Quick video tutorial connecting devices to an integration [here](https://www.youtube.com/watch?v=lnERw1f7TGE).
-:::
+:::info Quick video tutorial connecting devices to an integration
+[here](https://www.youtube.com/watch?v=lnERw1f7TGE). :::
 
-Node elements (devices, labels, integrations) need to be created before they're available on the Flows Workspace. More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
+Node elements (devices, labels, integrations) need to be created before they're
+available on the Flows Workspace. More information about Flows
+[here](https://docs.helium.com/use-the-network/console/flows/).
 
 ## Cargo Endpoint
 
