--- a/docs/use-the-network/console/integrations/microshare.mdx
+++ b/docs/use-the-network/console/integrations/microshare.mdx
@@ -8,8 +8,8 @@ slug: /use-the-network/console/integrations/microshare
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-[Microshare](https://www.microshare.io/) is a data leverage platform
-for the IoT era, providing a solution to sharing, privacy, security, audit, confidentiality,
+[Microshare](https://www.microshare.io/) is a data leverage platform for the IoT
+era, providing a solution to sharing, privacy, security, audit, confidentiality,
 data monetization and cost savings. You can sign up for a free account at
 [https://www.microshare.io/](https://www.microshare.io/).
 
@@ -25,7 +25,8 @@ shown below.
 
 Now we need to go over to the **Microshare** console and get our Pipe Token.
 
-In the ***Microshare*** console, click on "Keys" at the bottom-left, then "Create New App" in the upper-right.
+In the **_Microshare_** console, click on "Keys" at the bottom-left, then
+"Create New App" in the upper-right.
 
 <img
   src={useBaseUrl(
@@ -33,7 +34,8 @@ In the ***Microshare*** console, click on "Keys" at the bottom-left, then "Creat
   )}
 />
 
-Now, we give it a name - in this case, we simply call it "Helium Console" and click "Create App".
+Now, we give it a name - in this case, we simply call it "Helium Console" and
+click "Create App".
 
 <img
   src={useBaseUrl(
@@ -41,7 +43,8 @@ Now, we give it a name - in this case, we simply call it "Helium Console" and cl
   )}
 />
 
-Click on the "Generate a Token" button, select "Pipe Token" and click the "Create Token" button.
+Click on the "Generate a Token" button, select "Pipe Token" and click the
+"Create Token" button.
 
 <img
   src={useBaseUrl(
@@ -55,8 +58,9 @@ Click on the "Generate a Token" button, select "Pipe Token" and click the "Creat
   )}
 />
 
-Now that the token is generated, let's copy it so that we can enter it into the Helium Console.
-Select the "Tokens" tab at the top of the screen, then click the Token itself to copy it to your clipboard.
+Now that the token is generated, let's copy it so that we can enter it into the
+Helium Console. Select the "Tokens" tab at the top of the screen, then click the
+Token itself to copy it to your clipboard.
 
 <img
   src={useBaseUrl(
@@ -64,8 +68,9 @@ Select the "Tokens" tab at the top of the screen, then click the Token itself to
   )}
 />
 
-Finally, let's paste in the token from **Microshare** in step 2 and name the integration in step 3. You will use this name to
-identify the integration when attaching it to devices.
+Finally, let's paste in the token from **Microshare** in step 2 and name the
+integration in step 3. You will use this name to identify the integration when
+attaching it to devices.
 
 <img
   src={useBaseUrl(
@@ -75,10 +80,15 @@ identify the integration when attaching it to devices.
 
 ## Connecting Integrations to Devices
 
-Devices or groups of devices (via labels) can be directly connected to integrations on the Flows Worskpace. Labels are identifiers used to group devices for easy management. To connect one or more devices to one or more integrations, simply connect the Device and Integration nodes on the Flows Workspace.
+Devices or groups of devices (via labels) can be directly connected to
+integrations on the Flows Worskpace. Labels are identifiers used to group
+devices for easy management. To connect one or more devices to one or more
+integrations, simply connect the Device and Integration nodes on the Flows
+Workspace.
 
-:::info
-Quick video tutorial connecting devices to an integration [here](https://www.youtube.com/watch?v=lnERw1f7TGE).
-:::
+:::info Quick video tutorial connecting devices to an integration
+[here](https://www.youtube.com/watch?v=lnERw1f7TGE). :::
 
-Node elements (devices, labels, integrations) need to be created before they're available on the Flows Workspace. More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
+Node elements (devices, labels, integrations) need to be created before they're
+available on the Flows Workspace. More information about Flows
+[here](https://docs.helium.com/use-the-network/console/flows/).
