--- a/docs/use-the-network/console/integrations/mydevices-cayenne.mdx
+++ b/docs/use-the-network/console/integrations/mydevices-cayenne.mdx
@@ -38,28 +38,32 @@ integration:
 
 The next step is to name the integration
 
-:::info 
-**Downlink Not Yet Supported**  
+:::info **Downlink Not Yet Supported**  
 The MyDevices integration currently only supports uplinks. Downlinks are in the
-process of being implemented and will be available soon. 
-:::
+process of being implemented and will be available soon. :::
 
 ## Connecting Integrations to Devices
-Devices or groups of devices (via labels) can be directly connected to integrations on the Flows Worskpace. Labels are identifiers used to group devices for easy management. To connect one or more devices to one or more integrations, simply connect the Device and Integration nodes on the Flows Workspace.
 
-:::info
-Quick video tutorial connecting devices to an integration [here](https://www.youtube.com/watch?v=lnERw1f7TGE).
-:::
+Devices or groups of devices (via labels) can be directly connected to
+integrations on the Flows Worskpace. Labels are identifiers used to group
+devices for easy management. To connect one or more devices to one or more
+integrations, simply connect the Device and Integration nodes on the Flows
+Workspace.
 
-Node elements (devices, labels, integrations) need to be created before they're available on the Flows Workspace. More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
+:::info Quick video tutorial connecting devices to an integration
+[here](https://www.youtube.com/watch?v=lnERw1f7TGE). :::
+
+Node elements (devices, labels, integrations) need to be created before they're
+available on the Flows Workspace. More information about Flows
+[here](https://docs.helium.com/use-the-network/console/flows/).
 
 ### Adding Your Device on myDevices Cayenne
 
 Before adding your device to Cayenne, be sure you've successfully added it to
-the Helium network as well as connected it the myDevices Cayenne integration. If you haven't done so yet, start
-[here](../adding-devices). Once you have a device added on Console and you have
-verified that packets are being received, you can then proceed to add the device
-on Cayenne.
+the Helium network as well as connected it the myDevices Cayenne integration. If
+you haven't done so yet, start [here](../adding-devices). Once you have a device
+added on Console and you have verified that packets are being received, you can
+then proceed to add the device on Cayenne.
 
 First, signup for Cayenne
 [here](https://developers.mydevices.com/cayenne/signup/), if you have not
@@ -76,11 +80,9 @@ From the Cayenne dashboard, click **Add New** &gt; **Device / Widget**.
 From the list of devices & widgets that appears, click **LoRa** and select the
 **Helium** Network option to view a list of Helium supported devices.
 
-
-:::warning
-**Ensure you have selected the Helium Network**  
-You must select the Helium Network **before** searching for your device, else you may add your device on the wrong network and will not receive data.
-:::
+:::warning **Ensure you have selected the Helium Network**  
+You must select the Helium Network **before** searching for your device, else
+you may add your device on the wrong network and will not receive data. :::
 
 <img
   src={useBaseUrl(
