--- a/docs/use-the-network/console/integrations/ubidots.mdx
+++ b/docs/use-the-network/console/integrations/ubidots.mdx
@@ -9,9 +9,9 @@ slug: /use-the-network/console/integrations/ubidots
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 [Ubidots](https://ubidots.com/) allows you to rapidly assemble and launch
-Internet of Things (IoT) applications without having to write code or hire
-a software development team. You can sign up for a free
-account at [https://ubidots.com](https://ubidots.com/).
+Internet of Things (IoT) applications without having to write code or hire a
+software development team. You can sign up for a free account at
+[https://ubidots.com](https://ubidots.com/).
 
 To get started, log in to your Ubidots account and select **Plugins** from the
 **Devices** dropdown menu at the top of your screen:
@@ -46,9 +46,9 @@ Click the **>** (forward) button:
   )}
 />
 
-Under **Ubidots Token**, select the **Token** you wish to associate with this integration
-(we will just use **Default token**) and make sure **Device tags** is selected under
-**Use Helium labels as**:
+Under **Ubidots Token**, select the **Token** you wish to associate with this
+integration (we will just use **Default token**) and make sure **Device tags**
+is selected under **Use Helium labels as**:
 
 <img
   src={useBaseUrl(
@@ -80,7 +80,8 @@ And see your new Data Plugin being configured:
   )}
 />
 
-Now, click your avatar in the upper-right of your screen and select **API Credentials**:
+Now, click your avatar in the upper-right of your screen and select **API
+Credentials**:
 
 <img
   src={useBaseUrl(
@@ -113,8 +114,8 @@ And click **Ubidots** under **Add a Prebuilt Integration**:
   )}
 />
 
-Now, under **Enter Auth Token**, paste the Ubidots Default token we copied and click
-the **Get Webhook URL** button:
+Now, under **Enter Auth Token**, paste the Ubidots Default token we copied and
+click the **Get Webhook URL** button:
 
 <img
   src={useBaseUrl(
@@ -165,13 +166,19 @@ Notice that currently, no devices are piped through this Integration:
 Let's fix that!
 
 ## Connecting Integrations to Devices
-Devices or groups of devices (via labels) can be directly connected to integrations on the Flows Worskpace. Labels are identifiers used to group devices for easy management. To connect one or more devices to one or more integrations, simply connect the Device and Integration nodes on the Flows Workspace.
 
-:::info
-Quick video tutorial connecting devices to an integration [here](https://www.youtube.com/watch?v=lnERw1f7TGE).
-:::
+Devices or groups of devices (via labels) can be directly connected to
+integrations on the Flows Worskpace. Labels are identifiers used to group
+devices for easy management. To connect one or more devices to one or more
+integrations, simply connect the Device and Integration nodes on the Flows
+Workspace.
 
-Node elements (devices, labels, integrations) need to be created before they're available on the Flows Workspace. More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
+:::info Quick video tutorial connecting devices to an integration
+[here](https://www.youtube.com/watch?v=lnERw1f7TGE). :::
+
+Node elements (devices, labels, integrations) need to be created before they're
+available on the Flows Workspace. More information about Flows
+[here](https://docs.helium.com/use-the-network/console/flows/).
 
 Click on **Devices** on the menu on the left of your screen.
 
