--- a/docs/use-the-network/console/migrating-devices/ttn-import.mdx
+++ b/docs/use-the-network/console/migrating-devices/ttn-import.mdx
@@ -25,13 +25,16 @@ switch to the Organization that you want to import the devices into:
   )}
 />
 
-Next, select "Devices" on the left-hand menu and click the Add New Device **+** button.
+Next, select "Devices" on the left-hand menu and click the Add New Device **+**
+button.
 
 <img
-  src={useBaseUrl("img/use-the-network/console/migrating-devices/console-import-device.png")}
+  src={useBaseUrl(
+    "img/use-the-network/console/migrating-devices/console-import-device.png"
+  )}
 />
 
-Click the "Import from the Things Network" button. 
+Click the "Import from the Things Network" button.
 
 ## Retrieving a TTN Access Code
 
@@ -120,8 +123,7 @@ created from the TTN Application name.
 
 :::info  
 Once your devices are organized using Labels, you can address them
-programmatically via the Console API. 
-:::
+programmatically via the Console API. :::
 
 <img
   src={useBaseUrl(
