--- a/docs/use-the-network/console/functions.mdx
+++ b/docs/use-the-network/console/functions.mdx
@@ -11,19 +11,20 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 You can now execute functions on Console! With the Decoder Function, users can
 transform and/or parse a raw payload before it is posted to an endpoint.
 
-When a Decoder Function is applied to a device or integration the
-Decoder Function code is executed on the payload sent by the device. The Decoder
+When a Decoder Function is applied to a device or integration the Decoder
+Function code is executed on the payload sent by the device. The Decoder
 Function can be written using custom JavaScript code provided by the user or
 selected from prebuilt decoders \(currently Browan Object Locator and Cayenne
-LPP\). 
+LPP\).
 
 Console decoders are compatible with The Things Network \(TTN\) decoders, which
 are already available for a wide variety of devices.
 
-In addition, to providing a custom decoder a growing list of community-created functions can be found [here](https://github.com/helium/console-decoders). 
+In addition, to providing a custom decoder a growing list of community-created
+functions can be found [here](https://github.com/helium/console-decoders).
 
-For more information on how to create and attach functions, check out our Tips and Tricks video [here](https://youtu.be/UNUOLbIKXww).
-
+For more information on how to create and attach functions, check out our Tips
+and Tricks video [here](https://youtu.be/UNUOLbIKXww).
 
 ## A Primer on Encoding and Decoding
 
@@ -48,17 +49,15 @@ another service.
 
 ## Creating a Decoder Function
 
-:::info 
-**Decoder Library on GitHub**  
+:::info **Decoder Library on GitHub**  
 If you have purchased an off-the-shelf device, it is likely that there already
 exists a decoder you can use! We have a
 [repository ](https://github.com/helium/console-decoders)that contains decoders
-for a number of popular devices. 
-:::
+for a number of popular devices. :::
 
 To begin creating a new function within the Helium Console, select Functions
-from the left side navigation. Then create a new Function by clicking the
-Add New Function **+** icon. [IMAGE]
+from the left side navigation. Then create a new Function by clicking the Add
+New Function **+** icon. [IMAGE]
 
 Name your new Function, select "Decoder" as Function Type, and "Custom Script"
 as Format if you want to enter your own script, or select from the predefined
@@ -94,8 +93,7 @@ function Decoder(bytes, port) {
 ### Decoder Function Output
 
 The data returned by your function decoder will be included in an additional
-decoded.payload field in the standard
-[JSON message](integrations/json-schema),
+decoded.payload field in the standard [JSON message](integrations/json-schema),
 it will not alter the original payload field. An example of the decoded field is
 shown below.
 
@@ -116,8 +114,12 @@ shown below.
 
 You need to attach functions to:
 
-- a device or a group of devices (via a label): This results in the function only being applied to the device payload in the Debug utility.
+- a device or a group of devices (via a label): This results in the function
+  only being applied to the device payload in the Debug utility.
 
- - a device or group of devices (via a label) and an integration: This results in the function being applied to payloads before being sent to the integration.
+- a device or group of devices (via a label) and an integration: This results in
+  the function being applied to payloads before being sent to the integration.
 
-Easily attach functions to devices, labels, and integations in the Flows Workspace. For more information about Flows click here [https://docs.helium.com/use-the-network/console/flows](/use-the-network/console/flows/)
+Easily attach functions to devices, labels, and integations in the Flows
+Workspace. For more information about Flows click here
+[https://docs.helium.com/use-the-network/console/flows](/use-the-network/console/flows/)
