--- a/docs/use-the-network/console/integrations/aws-iot-core.mdx
+++ b/docs/use-the-network/console/integrations/aws-iot-core.mdx
@@ -74,10 +74,8 @@ into the "**Filter Policies**" box and check the box to the left of the row:
   )}
 />
 
-:::warning 
-Ensure you record and store these keys securely, as you will not have
-an opportunity to get access to them again! 
-:::
+:::warning Ensure you record and store these keys securely, as you will not have
+an opportunity to get access to them again! :::
 
 Back in the **Helium Console**, enter the credentials we just created under
 **AWS Connection Details,** as well as the AWS region that you would like AWS
@@ -92,17 +90,23 @@ IoT to run in.
 The **Topic** field is the AWS IoT MQTT topic that this integration will publish
 uplink messages to, from devices.
 
-Finally, we give our new Integration a name and click **Create Integration**. Your new Integration is now ready for use.
+Finally, we give our new Integration a name and click **Create Integration**.
+Your new Integration is now ready for use.
 
 ### Connecting Integrations to Devices
 
-Devices or groups of devices (via labels) can be directly connected to integrations on the Flows Worskpace. Labels are identifiers used to group devices for easy management. To connect one or more devices to one or more integrations, simply connect the Device and Integration nodes on the Flows Workspace.
+Devices or groups of devices (via labels) can be directly connected to
+integrations on the Flows Worskpace. Labels are identifiers used to group
+devices for easy management. To connect one or more devices to one or more
+integrations, simply connect the Device and Integration nodes on the Flows
+Workspace.
 
-:::info
-Quick video tutorial connecting devices to an integration [here](https://www.youtube.com/watch?v=lnERw1f7TGE).
-:::
+:::info Quick video tutorial connecting devices to an integration
+[here](https://www.youtube.com/watch?v=lnERw1f7TGE). :::
 
-Node elements (devices, labels, integrations) need to be created before they're available on the Flows Workspace. More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
+Node elements (devices, labels, integrations) need to be created before they're
+available on the Flows Workspace. More information about Flows
+[here](https://docs.helium.com/use-the-network/console/flows/).
 
 ## AWS IoT MQTT Topic composition:
 
@@ -183,9 +187,9 @@ base64 encoded string.
 
 ### Viewing Integration in AWS IoT Core
 
-Once our devices have been connected on the Flows Worskpace to our new Integration,
-let's return to the [AWS Console](https://console.aws.amazon.com/), and go to
-**IoT Core** under the **Services** menu:
+Once our devices have been connected on the Flows Worskpace to our new
+Integration, let's return to the [AWS Console](https://console.aws.amazon.com/),
+and go to **IoT Core** under the **Services** menu:
 
 <img
   src={useBaseUrl(
