--- a/docs/use-the-network/console/integrations/datacake.mdx
+++ b/docs/use-the-network/console/integrations/datacake.mdx
@@ -8,8 +8,10 @@ slug: /use-the-network/console/integrations/datacake
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-[Datacake](https://datacake.co) is a multi-purpose, low-code IoT platform that requires no programming skills and minimal time to create custom IoT applications. You can sign up for a free
-account at [https://datacake.co](https://datacake.co).
+[Datacake](https://datacake.co) is a multi-purpose, low-code IoT platform that
+requires no programming skills and minimal time to create custom IoT
+applications. You can sign up for a free account at
+[https://datacake.co](https://datacake.co).
 
 To add the integration in Console, go to **Integrations** on the left-hand menu.
 Select the integration to add - in this case, the **Datacake** integration as
@@ -21,9 +23,11 @@ shown below.
   )}
 />
 
-To integrate Helium Console with Datacake, you'll need to input your **personal access token** from Datacake. When you register on the Datacake platform and create a user account, a token is automatically created.
-You can view your own token via the User Settings Menu. You can reach this menu by clicking on "Edit Profile" at the end of the list using the Workspace Selector:
-
+To integrate Helium Console with Datacake, you'll need to input your **personal
+access token** from Datacake. When you register on the Datacake platform and
+create a user account, a token is automatically created. You can view your own
+token via the User Settings Menu. You can reach this menu by clicking on "Edit
+Profile" at the end of the list using the Workspace Selector:
 
 <img
   src={useBaseUrl(
@@ -31,8 +35,9 @@ You can view your own token via the User Settings Menu. You can reach this menu 
   )}
 />
 
-You will now see a menu where you can make your personal account settings. There is also a sidebar and in this you will find the item "API". If you click on it, you will find your personal access token there:
-
+You will now see a menu where you can make your personal account settings. There
+is also a sidebar and in this you will find the item "API". If you click on it,
+you will find your personal access token there:
 
 <img
   src={useBaseUrl(
@@ -40,8 +45,8 @@ You will now see a menu where you can make your personal account settings. There
   )}
 />
 
-
-Copy this value into the **Enter Datacake Token** field in Console for the integration configuration shown below.
+Copy this value into the **Enter Datacake Token** field in Console for the
+integration configuration shown below.
 
 <img
   src={useBaseUrl(
@@ -49,8 +54,9 @@ Copy this value into the **Enter Datacake Token** field in Console for the integ
   )}
 />
 
-Set a name for the integration in step 3. You will use this name to
-identify the integration when attaching it to devices. Simply calling the integration 'Datacake' is sufficient for most implementations.
+Set a name for the integration in step 3. You will use this name to identify the
+integration when attaching it to devices. Simply calling the integration
+'Datacake' is sufficient for most implementations.
 
 <img
   src={useBaseUrl(
@@ -60,10 +66,15 @@ identify the integration when attaching it to devices. Simply calling the integr
 
 ## Connecting Integrations to Devices
 
-Devices or groups of devices (via labels) can be directly connected to integrations on the Flows Worskpace. Labels are identifiers used to group devices for easy management. To connect one or more devices to one or more integrations, simply connect the Device and Integration nodes on the Flows Workspace.
+Devices or groups of devices (via labels) can be directly connected to
+integrations on the Flows Worskpace. Labels are identifiers used to group
+devices for easy management. To connect one or more devices to one or more
+integrations, simply connect the Device and Integration nodes on the Flows
+Workspace.
 
-:::info
-Quick video tutorial connecting devices to an integration [here](https://www.youtube.com/watch?v=lnERw1f7TGE).
-:::
+:::info Quick video tutorial connecting devices to an integration
+[here](https://www.youtube.com/watch?v=lnERw1f7TGE). :::
 
-Node elements (devices, labels, integrations) need to be created before they're available on the Flows Workspace. More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
+Node elements (devices, labels, integrations) need to be created before they're
+available on the Flows Workspace. More information about Flows
+[here](https://docs.helium.com/use-the-network/console/flows/).
