--- a/docs/use-the-network/console/integrations/google-sheets.mdx
+++ b/docs/use-the-network/console/integrations/google-sheets.mdx
@@ -14,8 +14,8 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 Create a form.
 
-Make a question for each field you want to capture from your device.
-We're going to use an environment sensor for this example.
+Make a question for each field you want to capture from your device. We're going
+to use an environment sensor for this example.
 
 We recommend setting questions to "Short Answer".
 
@@ -24,7 +24,6 @@ We recommend setting questions to "Short Answer".
     "img/use-the-network/console/integrations/integrations-google-sheets-createform.png"
   )}
 />
-
 
 ## Make Form Public
 
@@ -44,10 +43,10 @@ Make sure the form is publicly accessible.
   )}
 />
 
-
 ## Connecting to Google Sheets
 
-Head over to the responses tab and tell the form you want your results sent to Google Sheets by clicking the Google Sheets button.
+Head over to the responses tab and tell the form you want your results sent to
+Google Sheets by clicking the Google Sheets button.
 
 <img
   src={useBaseUrl(
@@ -57,8 +56,8 @@ Head over to the responses tab and tell the form you want your results sent to G
 
 ## Get Share Link
 
-Now go to the **Send** button in the top right corner, and we're going to grab the share link.
-Do not shorten the URL.
+Now go to the **Send** button in the top right corner, and we're going to grab
+the share link. Do not shorten the URL.
 
 <img
   src={useBaseUrl(
@@ -68,8 +67,9 @@ Do not shorten the URL.
 
 ## Adding the Integration
 
-Moving over to Console, to add a Google Sheets integration in Console, go to **Integrations** on the left-hand menu.
-Select the integration to add - in this case, the **Google Sheets** integration as shown below.
+Moving over to Console, to add a Google Sheets integration in Console, go to
+**Integrations** on the left-hand menu. Select the integration to add - in this
+case, the **Google Sheets** integration as shown below.
 
 <img
   src={useBaseUrl(
@@ -81,9 +81,12 @@ Select the integration to add - in this case, the **Google Sheets** integration 
 
 Paste the share link in the **Enter Google Form ID** field.
 
-We're only after the ID of the form, so we're going to remove the prefix `https://docs.google.com/forms/d/e/` and suffix `/viewform?usp=sf_link`. We should be left with a big string that contains no slashes.
+We're only after the ID of the form, so we're going to remove the prefix
+`https://docs.google.com/forms/d/e/` and suffix `/viewform?usp=sf_link`. We
+should be left with a big string that contains no slashes.
 
-Now we can click the **Get Google Form Fields** button to verify we've done things correctly.
+Now we can click the **Get Google Form Fields** button to verify we've done
+things correctly.
 
 <img
   src={useBaseUrl(
@@ -93,15 +96,22 @@ Now we can click the **Get Google Form Fields** button to verify we've done thin
 
 ## Create your Decoder
 
-Click the **Generate Function Body with Fields Above** button and Decoder template will be created for you to translate your data into how Google Form expects it.
+Click the **Generate Function Body with Fields Above** button and Decoder
+template will be created for you to translate your data into how Google Form
+expects it.
 
 Take this time to name your integration.
 
-We can fill out the Function Body now, or save the integration and edit it later under **Functions**.
-We're going to fill it out now.
+We can fill out the Function Body now, or save the integration and edit it later
+under **Functions**. We're going to fill it out now.
 
-The data in this example is coming from a [Wisblock](https://docs.helium.com/use-the-network/devices/development/rakwireless/wisblock-4631/) with an environment sensor that's included in the [RAK Helium Devkit](https://store.rakwireless.com/collections/helium/products/helium-developer-kit).
-The Decoder function for this environment sensor is pasted into the **Function Body** section and passed the data from the device so it can get us the fields we need. We then map those to the google forms fields.
+The data in this example is coming from a
+[Wisblock](https://docs.helium.com/use-the-network/devices/development/rakwireless/wisblock-4631/)
+with an environment sensor that's included in the
+[RAK Helium Devkit](https://store.rakwireless.com/collections/helium/products/helium-developer-kit).
+The Decoder function for this environment sensor is pasted into the **Function
+Body** section and passed the data from the device so it can get us the fields
+we need. We then map those to the google forms fields.
 
 <img
   src={useBaseUrl(
@@ -113,4 +123,5 @@ With that done, we can click **Add Integration**.
 
 ## Attach to Device
 
-Going to **Devices** on the left-hand menu, we can now [add our label](../labels).
+Going to **Devices** on the left-hand menu, we can now
+[add our label](../labels).
