--- a/docs/use-the-network/console/integrations/http.mdx
+++ b/docs/use-the-network/console/integrations/http.mdx
@@ -184,11 +184,15 @@ the steps below to successfully send your downlink message to your device.
 
 ## Connecting Integrations to Devices
 
-Devices or groups of devices (via labels) can be directly connected to integrations on the Flows Worskpace. Labels are identifiers used to group devices for easy management. To connect one or more devices to one or more integrations, simply connect the Device and Integration nodes on the Flows Workspace.
+Devices or groups of devices (via labels) can be directly connected to
+integrations on the Flows Worskpace. Labels are identifiers used to group
+devices for easy management. To connect one or more devices to one or more
+integrations, simply connect the Device and Integration nodes on the Flows
+Workspace.
 
-:::info
-Quick video tutorial connecting devices to an integration [here](https://www.youtube.com/watch?v=lnERw1f7TGE).
-:::
+:::info Quick video tutorial connecting devices to an integration
+[here](https://www.youtube.com/watch?v=lnERw1f7TGE). :::
 
-Node elements (devices, labels, integrations) need to be created before they're available on the Flows Workspace. More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
-
+Node elements (devices, labels, integrations) need to be created before they're
+available on the Flows Workspace. More information about Flows
+[here](https://docs.helium.com/use-the-network/console/flows/).
