default prettier formatting on docs/use-the-network/run-a-network-server
npx prettier --write --prose-wrap always docs/use-the-network

--- a/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
@@ -23,8 +23,12 @@ disambiguate.
 
 :::info
 
-Based on latest benchmarking tests the upper limit for a Devaddr `1024` slab is approximately 5800 devices, but results still need to be replicated and bracketed. Community members are encouraged to run their own benchmarking tests.
-Instructions [here](https://docs.helium.com/use-the-network/run-a-network-server/router-benchmarking). Requires basic familiarity with Linux and Bash command-line.
+Based on latest benchmarking tests the upper limit for a Devaddr `1024` slab is
+approximately 5800 devices, but results still need to be replicated and
+bracketed. Community members are encouraged to run their own benchmarking tests.
+Instructions
+[here](https://docs.helium.com/use-the-network/run-a-network-server/router-benchmarking).
+Requires basic familiarity with Linux and Bash command-line.
 
 :::
 
@@ -36,7 +40,9 @@ DCs and each DevAddr cost an additional US$100 in DC.
 
 DevAddr are sold in sequential blocks between 8 and 65,536 and any power of two.
 
-You must purchase a slab when purchasing an OUI, therefore, the total minimum cost is US$900 worth of Data Credits: $100 for the OUI itself and $800 for eight DevAddr's.
+You must purchase a slab when purchasing an OUI, therefore, the total minimum
+cost is US$900 worth of Data Credits: $100 for the OUI itself and $800 for eight
+DevAddr's.
 
 [The OUI purchase transaction itself](https://github.com/helium/proto/blob/master/src/blockchain_txn_oui_v1.proto)
 incurs a fee based as does any other blockchain transaction; generally this will
@@ -60,9 +66,10 @@ Submit a "create OUI" transaction:
 
 The filter is a dummy filter to initialize the OUI. When you get Console
 running, it will automatically maintain it. You can once again track the
-transaction with the endpoint above. When it is complete, you should also see your OUI as the most recently purchased and [on the list here](https://api.helium.io/v1/ouis).
+transaction with the endpoint above. When it is complete, you should also see
+your OUI as the most recently purchased and
+[on the list here](https://api.helium.io/v1/ouis).
 
 Congratulations! You are the proud owner of a Helium Network OUI. OUIs are
 numbered sequentially, so the lower you are, the earlier you were on the
 Network!
-
