default prettier formatting on docs/use-the-network/coverage-mapping
npx prettier --write --prose-wrap always docs/use-the-network

--- a/docs/use-the-network/coverage-mapping/adeunis-mapper.mdx
+++ b/docs/use-the-network/coverage-mapping/adeunis-mapper.mdx
@@ -37,11 +37,9 @@ for 6 hours in order for it to be fully charged.
 Follow all the steps provided below for step-by-step instructions on how to
 properly operate the field test device.
 
-:::important
- You must power on the device in a location with coverage in order
+:::important You must power on the device in a location with coverage in order
 for the device to first join the network. If the device is not able to join, it
-will never begin sending uplinks. 
-:::
+will never begin sending uplinks. :::
 
 First, power the device On by flipping the switch on the bottom of the device
 into the ON position.
@@ -101,11 +99,9 @@ more satellites are visible. You can now navigate to the Packet Count screen by
 again pressing the same _Push Button 2_, once if the display backlight is on,
 and twice if it is off.
 
-:::important
-Ignore the PER % number as shown in the packet count screen below.
+:::important Ignore the PER % number as shown in the packet count screen below.
 This value is not meaningful for the current configuration. Only pay attention
-to the UL\(Uplink\) Count. 
-:::
+to the UL\(Uplink\) Count. :::
 
 <img
   src={useBaseUrl(
