--- a/docs/use-the-network/coverage-mapping/mappers-api.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-api.mdx
@@ -35,10 +35,11 @@ Requests are intended to be sent from an HTTP integration within Console.
 Metadata from the standard JSON message is used in addition to the required
 fields detailed below.
 
-All required fields are case sensitive and must be in the top level of the 
+All required fields are case sensitive and must be in the top level of the
 decoded payload section as shown below:
+
 ```json
-"decoded": { 
+"decoded": {
   "payload" : {
     "accuracy": 2,
     "altitude": 2,
@@ -48,8 +49,8 @@ decoded payload section as shown below:
 }
 ```
 
-All of the following fields are required `latitude`, `longitude`, `altitude`
-, `accuracy`.
+All of the following fields are required `latitude`, `longitude`, `altitude` ,
+`accuracy`.
 
 <Tabs
   block={true}
@@ -59,12 +60,12 @@ All of the following fields are required `latitude`, `longitude`, `altitude`
 
 _Body Parameters_
 
-| Parameter Name  | Type     | Description                 | Expected Unit   | Example                |
-| --------------- | -------- | --------------------------- | --------------- | ---------------------- |
-| latitude        | _float_ | Device Latitude Value       | Decimal Degrees | `  37.79518664339426`  |
-| longitude       | _float_ | Device Longitude Value      | Decimal Degrees | `-122.39384483747301`  |
-| altitude        | _int_   | Device Altitude Value       | Meters          | `10`                   |
-| accuracy        | _float_ | Device GPS Accuracy Value   | Meters          | `2.3`                  |
+| Parameter Name | Type    | Description               | Expected Unit   | Example               |
+| -------------- | ------- | ------------------------- | --------------- | --------------------- |
+| latitude       | _float_ | Device Latitude Value     | Decimal Degrees | ` 37.79518664339426`  |
+| longitude      | _float_ | Device Longitude Value    | Decimal Degrees | `-122.39384483747301` |
+| altitude       | _int_   | Device Altitude Value     | Meters          | `10`                  |
+| accuracy       | _float_ | Device GPS Accuracy Value | Meters          | `2.3`                 |
 
 </TabItem>
 <TabItem value="response">
