--- a/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
@@ -9,8 +9,9 @@ slug: /use-the-network/coverage-mapping/mappers-quickstart
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 This guide will show you step by step how to contribute data to the Mappers
-project with an off-the-shelf tracker. This guide will use the [Dragino LGT92](https://www.dragino.com/products/lora/item/142-lgt-92.html), 
-but any LoRaWAN compatible tracker will work.
+project with an off-the-shelf tracker. This guide will use the
+[Dragino LGT92](https://www.dragino.com/products/lora/item/142-lgt-92.html), but
+any LoRaWAN compatible tracker will work.
 
 ### Steps
 
@@ -22,15 +23,14 @@ but any LoRaWAN compatible tracker will work.
 ### 1. Add Device to Console
 
 To start, you'll need to add your device to Console. You should have been
-provided with a DevEUI, AppEUI, and AppKey from the seller of the device.
-Follow our [quickstart](/use-the-network/console/quickstart) for instructions on how to add a new device to
-Console.
+provided with a DevEUI, AppEUI, and AppKey from the seller of the device. Follow
+our [quickstart](/use-the-network/console/quickstart) for instructions on how to
+add a new device to Console.
 
 ### 2. Create HTTP Integration
 
-To create a new HTTP integration in Console, navigate to the
-Integrations page using the left navigation and then select the HTTP
-integration.
+To create a new HTTP integration in Console, navigate to the Integrations page
+using the left navigation and then select the HTTP integration.
 
 <img
   src={useBaseUrl(
@@ -55,76 +55,83 @@ Next we'll fill in the details, see instructions and image below.
 
 Next, we'll be creating a Function decoder to decode the payload from the device
 and properly format it for the API endpoint. The decoder is specific to the
-encoding scheme used to encode the data before the device transmits it. For off-the-shelf 
-devices this is usually manufacturer specific. For development devices,
-[CayenneLPP](https://developers.mydevices.com/cayenne/docs/lora/#lora-cayenne-low-power-payload) is often used. For this guide we'll be using a decoder specifically made for
-this tracking device. We have a repository with decoders for various devices [here](https://github.com/helium/console-decoders).
+encoding scheme used to encode the data before the device transmits it. For
+off-the-shelf devices this is usually manufacturer specific. For development
+devices,
+[CayenneLPP](https://developers.mydevices.com/cayenne/docs/lora/#lora-cayenne-low-power-payload)
+is often used. For this guide we'll be using a decoder specifically made for
+this tracking device. We have a repository with decoders for various devices
+[here](https://github.com/helium/console-decoders).
 
 To start, navigate to the Functions page using the left navigation and then
 click _Add Function_.
 
-1. Enter a name for the decoder (below we've used _Dragino LGT92 Decoder_), select the 
-   type of Function, _Decoder_ in this case, and finally select _Custom Script_
-   from the drop down.
+1. Enter a name for the decoder (below we've used _Dragino LGT92 Decoder_),
+   select the type of Function, _Decoder_ in this case, and finally select
+   _Custom Script_ from the drop down.
 2. Copy and paste the complete decoder function provided by the manufacturer or
-   found [here](https://github.com/helium/console-decoders/blob/master/Dragino/LGT92/decoder-v1.6.4.js).
+   found
+   [here](https://github.com/helium/console-decoders/blob/master/Dragino/LGT92/decoder-v1.6.4.js).
 
    ```javascript
-    function Decoder(bytes, port) {
-      // Decode an uplink message from a buffer
-      // (array) of bytes to an object of fields.
-      var latitude;//gps latitude,units: °
-      latitude = (bytes[0] << 24 | bytes[1] << 16 | bytes[2] << 8 | bytes[3]) / 1000000;//gps latitude,units: °
-      var longitude;
-      longitude = (bytes[4] << 24 | bytes[5] << 16 | bytes[6] << 8 | bytes[7]) / 1000000;//gps longitude,units: °
-      var alarm = (bytes[8] & 0x40) ? "TRUE" : "FALSE";//Alarm status
-      var batV = (((bytes[8] & 0x3f) << 8) | bytes[9]) / 1000;//Battery,units:V
-      if ((bytes[10] & 0xC0) == 0x40) {
-          var motion_mode = "Move";
-      }
-      else if ((bytes[10] & 0xC0) == 0x80) {
-          motion_mode = "Collide";
-      }
-      else if ((bytes[10] & 0xC0) == 0xC0) {
-          motion_mode = "User";
-      }
-      else {
-          motion_mode = "Disable";
-      }                                            //mode of motion
+   function Decoder(bytes, port) {
+     // Decode an uplink message from a buffer
+     // (array) of bytes to an object of fields.
+     var latitude; //gps latitude,units: °
+     latitude =
+       ((bytes[0] << 24) | (bytes[1] << 16) | (bytes[2] << 8) | bytes[3]) /
+       1000000; //gps latitude,units: °
+     var longitude;
+     longitude =
+       ((bytes[4] << 24) | (bytes[5] << 16) | (bytes[6] << 8) | bytes[7]) /
+       1000000; //gps longitude,units: °
+     var alarm = bytes[8] & 0x40 ? "TRUE" : "FALSE"; //Alarm status
+     var batV = (((bytes[8] & 0x3f) << 8) | bytes[9]) / 1000; //Battery,units:V
+     if ((bytes[10] & 0xc0) == 0x40) {
+       var motion_mode = "Move";
+     } else if ((bytes[10] & 0xc0) == 0x80) {
+       motion_mode = "Collide";
+     } else if ((bytes[10] & 0xc0) == 0xc0) {
+       motion_mode = "User";
+     } else {
+       motion_mode = "Disable";
+     } //mode of motion
 
-      var led_updown = (bytes[10] & 0x20) ? "ON" : "OFF";//LED status for position,uplink and downlink
-      var Firmware = 160 + (bytes[10] & 0x1f);  // Firmware version; 5 bits 
-      var roll = (bytes[11] << 24 >> 16 | bytes[12]) / 100;//roll,units: °
-      var pitch = (bytes[13] << 24 >> 16 | bytes[14]) / 100; //pitch,units: °
-      var hdop = 0;
-      if (bytes[15] > 0) {
-          hdop = bytes[15] / 100; //hdop,units: Â°
-      } else {
-          hdop = bytes[15];
-      }
-      var altitude = (bytes[16] << 24 >> 16 | bytes[17]) / 100; //Altitude,units: °
-      return {
-          latitude: latitude,  // Note that must be lower-case
-          longitude: longitude,
-          altitude: altitude,
-          accuracy: 3,
-          Roll: roll,
-          Pitch:pitch,
-          BatV:batV,
-          ALARM_status:alarm,
-          MD:motion_mode,
-          LON:led_updown,
-          FW:Firmware,
-          HDOP:hdop,
-      }
-    }
-    ```  
-  
-   Next we need to verify that all required fields are present in the function. 
-   Find more details on the API specification [here](/use-the-network/coverage-mapping/mappers-api).
-   The required fields are case-sensitive. If you got your decoder from the manufacturer and one or
-   more required fields are missing - add them with hard-coded values like accuracy in the above example.
-   
+     var led_updown = bytes[10] & 0x20 ? "ON" : "OFF"; //LED status for position,uplink and downlink
+     var Firmware = 160 + (bytes[10] & 0x1f); // Firmware version; 5 bits
+     var roll = (((bytes[11] << 24) >> 16) | bytes[12]) / 100; //roll,units: °
+     var pitch = (((bytes[13] << 24) >> 16) | bytes[14]) / 100; //pitch,units: °
+     var hdop = 0;
+     if (bytes[15] > 0) {
+       hdop = bytes[15] / 100; //hdop,units: Â°
+     } else {
+       hdop = bytes[15];
+     }
+     var altitude = (((bytes[16] << 24) >> 16) | bytes[17]) / 100; //Altitude,units: °
+     return {
+       latitude: latitude, // Note that must be lower-case
+       longitude: longitude,
+       altitude: altitude,
+       accuracy: 3,
+       Roll: roll,
+       Pitch: pitch,
+       BatV: batV,
+       ALARM_status: alarm,
+       MD: motion_mode,
+       LON: led_updown,
+       FW: Firmware,
+       HDOP: hdop,
+     };
+   }
+   ```
+
+   Next we need to verify that all required fields are present in the function.
+   Find more details on the API specification
+   [here](/use-the-network/coverage-mapping/mappers-api). The required fields
+   are case-sensitive. If you got your decoder from the manufacturer and one or
+   more required fields are missing - add them with hard-coded values like
+   accuracy in the above example.
+
 3. Finally, save your function.
 
 <img
@@ -135,7 +142,8 @@ click _Add Function_.
 
 ### 4. Create a Flow
 
-Next we will create a [_Flow_](/use-the-network/console/flows/orientation). Navigate to the Flows page and click the + sign next to Nodes.
+Next we will create a [_Flow_](/use-the-network/console/flows/orientation).
+Navigate to the Flows page and click the + sign next to Nodes.
 
 <img
   src={useBaseUrl(
@@ -143,9 +151,9 @@ Next we will create a [_Flow_](/use-the-network/console/flows/orientation). Navi
   )}
 />
 
-Drag and drop your device, function and integration on the workspace. Link them 
-by drawing lines with your mouse between the connection points. 
-Link device -> decoder -> integration.
+Drag and drop your device, function and integration on the workspace. Link them
+by drawing lines with your mouse between the connection points. Link device ->
+decoder -> integration.
 
 <img
   src={useBaseUrl(
@@ -164,8 +172,12 @@ shown below.
   )}
 />
 
-That's all! You can now expect to see your data show up on [mappers.helium.com](https://mappers.helium.com) in a few minutes. If you want to 
-see where your mapper is on the map, you could use [Cargo](https://cargo.helium.com). You will have to add one more [integration](/use-the-network/console/integrations/cargo/#add-a-cargo-integration) and link it to the decoder in your flow.
+That's all! You can now expect to see your data show up on
+[mappers.helium.com](https://mappers.helium.com) in a few minutes. If you want
+to see where your mapper is on the map, you could use
+[Cargo](https://cargo.helium.com). You will have to add one more
+[integration](/use-the-network/console/integrations/cargo/#add-a-cargo-integration)
+and link it to the decoder in your flow.
 
 <img
   src={useBaseUrl(
